Ingestion of changes at reasoner side (3/4 done)